--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,7 +1,5 @@
-@media screen and (max-width: 700px) {
-  .navbarcolor {
-  display: inline-block;
-}
+@media (min-width: 768px) and (max-width: 991.98px) { 
+
 .bodyHome {
   display: inline-block;
 }
@@ -21,11 +19,7 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+
 
 .App-header {
   background-color: #282c34;
@@ -82,27 +76,18 @@
   width: 205%;
   margin-left:0px;
 }
+
+
 .shake-little{
-  height: 230px;
-  width: 230px;
+  height: 150px;
+  width: 150px;
   justify-content: center;
-  align-items: center;
 }
 
 .tituloPpal{
   font-family: 'Playfair Display', serif;
-  font-size: 25px;
+  font-size: 15px;
   font-style: bold;
-}
-
-.divPpal{
-  margin-top: 1%;
-}
-
-.colLogo{
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
 }
 
 .colTituloPpal{
@@ -130,10 +115,9 @@
 
 .navbarcolor{
   background-color:#3E197A;
-  direction:ltr;
-  margin-right: 3%;
-  margin-left: 3%;
-  padding: 2% 1.5%;
+  
+  padding: 1%;
+  align-content: center;
 
 }
 
@@ -163,10 +147,6 @@
   color:#d397b4;
 }
 
-.container{
-  background-color:#6D2B91;
-}
-
 .fondoNav{
   background-color:#6D2B91;
 }
@@ -177,36 +157,14 @@
 
 {/*Formulario*/}
 
-.bodyFormulario{
-  display: flexbox;
-  margin-bottom: 56px;
-  margin-top:56px;
-}
-
-.botonFormulario{
-  margin-top:50px;
-}
-
-
 .divFormulario{
-  margin: 15px 15px;
   height:40px;
-  width: 300px;
-}
-.containerForm{
-  margin-left: 750px;
-  margin-right: 750px;
-  margin-top: 100px;
-  margin-bottom:100px;
-}
-
-.botonFormulario{
-  background:#d397b4;
+  width: 295px;
 }
 
 .descripcionForm{
   height: 160px;
-  width: 625px;
+  width: 250px;
   text-align: center;
 }
 
@@ -261,15 +219,6 @@
 
 }
 
-
-.row{
-  
-  background: white;
-  justify-content: center;
-  padding: 30px 30px;
-  border-radius: 52px;
-}
-
 .linkAbout{
   margin-top: 70px;
 }
@@ -315,6 +264,7 @@ li{
   margin-left: 130px;
 
 }
+
 
 /* Color Theme Swatches in Hex */
 .Plutonian-Vibes-1-hex { color: #23074D; }
