--- a/front/src/App.css
+++ b/front/src/App.css
@@ -176,11 +176,17 @@
 
 .descripcionForm{
   height: 120px;
+  width: 300px;
   border-radius: 3px;
+  text-align: center;
+  margin-top: 2px;
 }
 
 .inputForm{
   border-radius:3px;
+  width: 300px;
+  height: 38px;
+  text-align: center;
 }
 {/*Footer*/}
 
